modules/multi/sg.tf
resource "aws_security_group" "server_security_group" {
  count = 2
  name        = "security_group_${count.index}"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = "80"
    to_port     = "80"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "0"
    protocol    = "-1"
    to_port     = "0"
  }

  tags = {
    "Name" = "ServerSecurityGroup-${count.index}-${local.project_name}"
  }
}



resource "aws_security_group" "load_balancer_security_group" {
  name        = "terraform_alb_secuload_balancer_security_grouprity_group"
  vpc_id      = "${aws_vpc.vpc.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "LBSecurityGroup-${local.project_name}"
  }
}


resource "aws_security_group" "rds_security_group" {
  name        = "rds_security_group"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    "Name" = "RDSSecurityGroup-${local.project_name}"
  }
}
